--- a/css/style.css
+++ b/css/style.css
@@ -449,15 +449,18 @@ footer{
 	color: white;
 }
 
-footer p:nth-of-type(1){
+footer p{
 	float: left;
 	font-size: 14px;
 }
 
-footer p:nth-of-type(2){
+footer a{
 	float: right;
 	font-size: 14px;
+	color: white;
 }
+
+
 
 @media screen and (max-width: 1500px){
 	section.sessao1 .container{
